fix:refactering alignment of website

--- a/donation.css
+++ b/donation.css
@@ -10,6 +10,17 @@ html {
   width: 100%;
   overflow-x: hidden;
 }
+.container {
+  width: 1120px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.main-page1-container {
+  /* background: url("./allimages/annie-spratt-135307-unsplash.png");
+  background-repeat: no-repeat;
+  background-size: cover; */
+  /* padding: 8rem 0; */
+}
 .donation-title {
   color: #354463;
   font-size: 2rem;
@@ -27,15 +38,16 @@ html {
     font-size: 2rem;
     padding: 3rem;
 } */
+.main-page2-container {
+}
 .donation-detail {
+  display: flex;
+  flex-direction: column;
+  padding: 3rem 0rem;
   background-image: url(./allimages/annie-spratt-135307-unsplash.png);
   background-color: #354463;
   background-repeat: no-repeat;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  padding: 3rem 0rem;
-
   justify-content: center;
 }
 
@@ -211,7 +223,7 @@ html {
 
 .form-security {
   margin-left: 0.6rem;
-  
+
   /* margin-right: 1rem; */
 }
 
@@ -229,7 +241,7 @@ html {
   grid-template-columns: 1fr 1fr;
   column-gap: 1rem;
   row-gap: 4em;
-  padding: 1rem;
+  padding: 1rem 2rem;
   color: #354463;
   margin-top: 2rem;
 }
@@ -286,6 +298,17 @@ html {
     justify-content: space-between;
     flex-direction: row-reverse;
   }
+  .donation-form {
+    width: 40rem;
+    padding: 0 4rem;
+  }
+  .donation-line {
+    margin-top: -1rem;
+    font-size: 2.5rem;
+    text-align: center;
+    width: 80%;
+    margin-left: 4rem;
+  }
   .donation-info-button {
     /* display: flex; */
     padding: 1rem 2rem;
@@ -300,10 +323,10 @@ html {
 
   .form-security {
     margin-left: 0.6rem;
-    
+
     /* margin-right: 1rem; */
   }
-  
+
   .form-security input {
     margin-top: 0.6rem;
     width: 40%;
@@ -311,6 +334,7 @@ html {
   }
   .footer-main {
     grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 4.5rem;
   }
 
   .footer-learn-footer {
@@ -328,6 +352,7 @@ html {
     flex-direction: row-reverse;
     flex-direction: row-reverse;
     justify-content: center;
+    padding: 2rem 4rem;
   }
   .button-detail {
     display: flex;
@@ -335,6 +360,8 @@ html {
   }
   .donation-form {
     margin-left: 2rem;
+    width: 40rem;
+    /* height: 63.5rem; */
   }
   .donation-info-button {
     padding: 1rem 2rem;
@@ -344,13 +371,14 @@ html {
   .donation-line {
     margin-top: -1rem;
     font-size: 4.5rem;
-    text-align: center;
+    text-align: start;
     width: 50%;
-    margin-left: 3rem;
+    margin-left: 4rem;
   }
 
   .footer-main {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 0 6rem;
   }
 
   .footer-learn-footer {
